renamed folders and files according to GH conventions from previous bad naming

--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
                         </div>
                         
                         <ul class="resource-list">
-                            <li><a href="#">Learning HTML</a></li>
-                            <li><a href="#">Learning HTML</a></li>
-                            <li><a href="#">Learning HTML</a></li>
-                            <li><a href="#">Learning HTML</a></li>
+                            <li><a href="./projects/48-basics-exercise/index.html">48 Basics Ex</a></li>
+                            <li><a href="./projects/animated-buttons/index.html">Animated Buttons</a></li>
+                            <li><a href="./projects/animated-spinner/index.html">Animated Spinner</a></li>
+                            <li><a href="./projects/cantilever-2/">Cantilever 2L</a></li>
                             <li><a href="#">Learning HTML</a></li>
                             <li><a href="#">Learning HTML</a></li>
                         </ul>
