Added <details> and <summary> tags to enable collapsible HTML Fundamentals titles and styling to both tags
and broken images paths fixed on grid project to fix broken links from having changed repos around previously

--- a/projects/grid-project/index.html
+++ b/projects/grid-project/index.html
@@ -24,15 +24,15 @@
             <a href="#work">Work</a>
             <a href="#contact">Contact</a>
             <a href="#dribble">
-                <img src="GRID IMAGES/dribble_icon.png">
+                <img src="grid-images/dribble_icon.png">
             </a>
 
             <a href="#dribble">
-                <img src="GRID IMAGES/insta_icon.png">
+                <img src="grid-images/insta_icon.png">
             </a>
 
             <a href="#dribble">
-                <img src="GRID IMAGES/v_icon.png">
+                <img src="grid-images/v_icon.png">
             </a>
         </nav>
 
@@ -49,17 +49,17 @@
     
     
     <a href="#dribble">
-        <img src="GRID IMAGES/dribble_icon.png">
+        <img src="grid-images/">
     </a>
 
 
     <a href="#dribble">
-        <img src="GRID IMAGES/insta_icon.png">
+        <img src="grid-images/">
     </a>
 
 
     <a href="#dribble">
-        <img src="GRID IMAGES/v_icon.png">
+        <img src="grid-images/v_icon.png">
     </a>
 
     </nav>
@@ -71,47 +71,47 @@
 
 <div class="project-grid">
     <div class="project" id="eth">
-        <img src="GRID IMAGES/eth.avif">
+        <img src="grid-images/eth.avif">
         <p class="overlay">VIEW PROJECT</p>
     </div>
 
     <div class="project" id="alphabet">
-        <img src="GRID IMAGES/alphabet.avif">
+        <img src="grid-images/alphabet.avif">
         <p class="overlay">VIEW PROJECT</p>
     </div>
 
     <div class="project" id="traveler">
-        <img src="GRID IMAGES/traveler.avif">
+        <img src="grid-images/traveler.avif">
         <p class="overlay">VIEW PROJECT</p>
     </div>
 
     <div class="project" id="cube">
-        <img src="GRID IMAGES/cube.avif">
+        <img src="grid-images/cube.avif">
         <p class="overlay white">VIEW PROJECT</p>
     </div>
 
     <div class="project" id="astro">
-        <img src="GRID IMAGES/astro.avif">
+        <img src="grid-images/astro.avif">
         <p class="overlay white">VIEW PROJECT</p>
      </div>
 
      <div class="project" id="cup">
-        <img src="GRID IMAGES/cup.avif">
+        <img src="grid-images/cup.avif">
         <p class="overlay">VIEW PROJECT</p>
     </div>
 
     <div class="project" id="insta">
-        <img src="GRID IMAGES/insta.avif">
+        <img src="grid-images/insta.avif">
         <p class="overlay white">VIEW PROJECT</p>
     </div>
 
     <div class="project" id="foam">
-        <img src="GRID IMAGES/foam.avif">
+        <img src="grid-images/foam.avif">
         <p class="overlay">VIEW PROJECT</p>
     </div>
 
     <div class="project" id="dimensional">
-        <img src="GRID IMAGES/dimensional.avif">
+        <img src="grid-images/dimensional.avif">
         <p class="overlay white">VIEW PROJECT</p>
     </div>
 
